--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,8 @@
     <main>
         <h2>Presentación</h2>
         <br>
+        <img src="img/Perfil.jpg" height="200">
+        <br>
         <p>Mi nombre es Nicolás, tengo 40 años y 20 de ellos fueron trabajando en IT. La mayoria de ellos como Analista Funcional. 
             Actualmente soy Supervisor de Aplicaciones en una empresa de energía y en el equipo lideramos 
             distintos tipos de proyectos.
